--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
-    "sass": "^1.79.4"
+    "sass": "^1.79.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
