--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^6.26.2",
+    "react-scroll-progress-bar": "^2.0.3",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
     "sass": "^1.79.4",
