--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2",
+    "react-scroll-parallax": "^3.4.5",
     "react-scroll-progress-bar": "^2.0.3",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
